--- a/test-ecommerce/src/main/resources/application.properties
+++ b/test-ecommerce/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.servlet.contextPath=/qlbt
 server.port = 8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo-ecommerce?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/databaseDrug?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
+
 spring.datasource.username=root
 spring.datasource.password=12345
-
 
 # ===============================
 # JPA / HIBERNATE
@@ -21,6 +21,12 @@ bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 3600000
 bezkoder.app.jwtRefreshExpirationMs= 86400000
 
-## For test	
-#bezkoder.app.jwtExpirationMs= 60000
-#bezkoder.app.jwtRefreshExpirationMs= 120000
+# Maximum size of HTTP request that will be accepted by the server
+spring.servlet.multipart.max-request-size=10MB
+
+# Maximum size of a single file that can be uploaded
+spring.servlet.multipart.max-file-size=10MB
+
+spring.mvc.static-path-pattern=/imgs/**
+spring.resources.static-locations=file:/D:/BE_CP/khoa_luan_backend/khoa_luan_backend/src/main/resources/static/
+
